--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
       # Step 3: Install Composer dependencies in your project folder
       - name: Install dependencies
         run: composer install --no-interaction --prefer-dist
-        working-directory: git-implementing-tests
+        working-directory: git-implementing-test
 
       # Step 4: Run PHPUnit tests in your project folder
       - name: Run PHPUnit
         run: php vendor/bin/phpunit
-        working-directory: git-implementing-tests
+        working-directory: git-implementing-test
 
